--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "commander": "^2.11.0",
+    "csv-stringify": "^1.0.4",
     "csv-write-stream": "^2.0.0",
     "neo4j-driver": "^1.4.0",
     "node-dir": "^0.1.17"
